fix (styles): fix settings button z-index

--- a/content-src/components/PreferencesPane/PreferencesPane.scss
+++ b/content-src/components/PreferencesPane/PreferencesPane.scss
@@ -146,7 +146,7 @@
     position: fixed;
     right: 15px;
     top: 15px;
-    z-index: 11001;
+    z-index: 12001;
 
     &:hover {
       background-color: $very-light-grey;
